Fixed problem where app died on startup if login dialog not showing.

--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -1,7 +1,13 @@
 nav.loginRegisterButtons {
-  width: 200px;
+  width: 250px;
   padding-top: 10px;
   float: left;
+}
+nav.loginRegisterButtons .progress {
+  margin-bottom: 0;
+}
+nav.loginRegisterButtons .warningText {
+  color: red;
 }
 /* Dashboard panels */
 .dashboard .panelNoPadding .panel-body {
